[gd_scene load_steps=3 format=3 uid="uid://dfqf20b1gvbx6"]

[ext_resource type="Script" path="res://src/UI/game_ui.gd" id="1_hlsmw"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2kd3i"]
resource_name = "CableTypes"

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hlsmw")

[node name="FPSCounter" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0"

[node name="TopMiddle" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Timer" type="Label" parent="TopMiddle"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WarningLabel" type="Label" parent="TopMiddle"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Warning"

[node name="CableTypesButtons" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="CableCopperButton" type="Button" parent="CableTypesButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_2kd3i")
text = "Copper"

[node name="CableFiberButton" type="Button" parent="CableTypesButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2kd3i")
text = "Fiber"

[node name="NewNodesButtons" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="NewSwitchButton" type="Button" parent="NewNodesButtons"]
layout_mode = 2
text = "New Switch"

[node name="NewHouseButton" type="Button" parent="NewNodesButtons"]
layout_mode = 2
text = "New House"

[node name="CursorModeButtons" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_bottom = 31.0
grow_horizontal = 0

[node name="DeleteCableButton" type="Button" parent="CursorModeButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2kd3i")
text = "Delete selected"

[connection signal="pressed" from="CableTypesButtons/CableCopperButton" to="." method="_on_cable_copper_button_pressed"]
[connection signal="pressed" from="CableTypesButtons/CableFiberButton" to="." method="_on_cable_fiber_button_pressed"]
[connection signal="pressed" from="NewNodesButtons/NewSwitchButton" to="." method="_on_new_switch_button_pressed"]
[connection signal="pressed" from="NewNodesButtons/NewHouseButton" to="." method="_on_new_house_button_pressed"]
[connection signal="pressed" from="CursorModeButtons/DeleteCableButton" to="." method="_on_delete_cable_button_pressed"]
